# CATChem

./: .codespellrc  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CMakeLists copy.txt  CMakeLists.txt  LocalBuild.sh  NOTICE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
api/: index.html
drivers/ccpp/: CMakeLists.txt  catchem_anthropogenic_wrapper.F90  catchem_dmsemis_wrapper.F90  catchem_drydep_wrapper.F90  catchem_dust_wrapper.F90  catchem_gfdlam4chem_wrapper.F90  catchem_gocart_wrapper.F90  catchem_gocartracm_wrapper.F90  catchem_lnox_wrapper.F90  catchem_plume_wrapper.F90  catchem_rad_wrapper.F90  catchem_seas_wrapper.F90  catchem_settling_wrapper.F90  catchem_soa_wrapper.F90  catchem_types.F90  catchem_wetdep_wrapper.F90  catchem_wrapper_utils.F90  ccpp_catchem_interface.F90  ccpp_wrapper.F90
drivers/nuopc/: CATChem_field_mapping.yml  CMakeLists.txt  aqmio.F90  catchem_emis_mod.F90  catchem_nuopc_cap.F90  catchem_nuopc_cf_input.F90  catchem_nuopc_driver.F90  catchem_nuopc_interface.F90  catchem_nuopc_netcdf_out.F90  catchem_nuopc_utils.F90  catchem_types.F90
drivers/nuopc/old/: Makefile.aqmio_test  catchem_nuopc_cf_input.F90  catchem_nuopc_driver.F90  catchem_nuopc_netcdf_out.F90  test_aqmio_working.F90  test_yaml_parsing.F90
drivers/standalone/: CMakeLists.txt  column_driver_config.yml.in  standalone_column_driver.F90
examples/: CATChemAPI_Example.F90  CMakeLists.txt  advanced_field_mapping_example.F90  host_model_integration_template.F90  modern_initialization_example.F90  netcdf_mpi_example.F90  process_diagnostics_example.F90  simple_integration_example.F90  standalone_column_driver.F90
src/: CMakeLists.txt  drydep_gocart_mod.F90  drydep_wesely_mod.F90  dust_fengsha_mod.F90  gocart_aerosols_mod.F90  gocart_dmsemis_mod.F90  plume_rise_mod.F90  wetdep_ls_mod.F90
src/api/: CATChemAPI_Mod.F90  CATChemNetCDF_Mod.F90  CATChem_API.F90  CATChem_HighLevel_API.F90  CMakeLists.txt  FieldMapping_Mod.F90  catchem.F90  run_mod.F90
src/core/: CATChemCore_Mod.F90  CMakeLists.txt  ChemSpeciesUtils_Mod.F90  ColumnInterface_Mod.F90  ConfigManager_Mod.F90  DiagnosticInterface_Mod.F90  DiagnosticManager_Mod.F90  EmissionConfigValidator_Mod.F90  ExtEmisData_Mod.F90  GridGeometry_Mod.F90  GridManager_Mod.F90  Precision_Mod.F90  ProcessFactory_Mod.F90  ProcessInterface_Mod.F90  ProcessManager_Mod.F90  ProcessRegistry_Mod.F90  StateManager_Mod.F90  TimeState_Mod.F90  UnitConversion_Mod.F90  VirtualColumn_Mod.F90  charpak_mod.F90  chemstate_mod.F90  cmn_size_mod.F90  config_mod.F90  config_opt_mod.F90  constants.F90  diagstate_mod.F90  emisstate_mod.F90  error_mod.F90  gridstate_mod.F90  init_mod.F90  met_utilities_mod.F90  metstate_mod.F90  precision_mod.F90  qfyaml_mod.F90  run_mod.F90  species_mod.F90  state_interface.F90  state_interface_mod.F90  state_mod.F90  (+4 more)
src/core/config/: ConfigManager_Mod.F90
src/gfdlam4chem/: atmos_age_tracer.F90  atmos_radon.F90  atmos_regional_tracer_driver.F90  cloud_chem.F90  gfdl_am4chem_mod.F90  gfdl_astronomy.F90  gfdl_drydep_mod.F90  gfdl_lnox_mod.F90  gfdl_sat_vapor_pres.F90  gfdl_sat_vapor_pres_k.F90  gfdl_soa_mod.F90  gfdl_time_utls.F90  gfdl_wetdep_mod.F90  mo_chem_utls.F90  mo_chemdr.F90  mo_chemini.F90  mo_errmsg.F90  mo_fastjx.F90  mo_fphoto.F90  mo_imp_slv.F90  mo_photo.F90  mo_read_sim_chm.F90  mo_setsox.F90  mo_usrrxt.F90  mo_vinterp.F90  moz.mods.F90  strat_chem_utilities.F90
src/mechanisms/gocartracm/: gocartracm_data_mod.F90  module_chemvars.F90  module_gocartracm_driver.F90  module_kpp_gocartracm_Integr.F90  module_kpp_gocartracm_Jacobian.F90  module_kpp_gocartracm_JacobianSP.F90  module_kpp_gocartracm_Parameters.F90  module_kpp_gocartracm_Update_Rconst.F90  module_phot_mad.F90  phot_data_mod.F90
src/process/: CMakeLists.txt  ProcessFactory_Mod.F90  ProcessInterface_Mod.F90  ProcessManager_Mod.F90  Process_driver_template.F90  ccpr_scheme_template.F90
src/process/chem/: CCPr_Chem_Mod.F90
src/process/drydep/: CCPr_DryDep_Mod.F90  CCPr_DryDep_Mod_old.F90  CMakeLists.txt  DryDepCommon_Mod.F90  DryDepProcessCreator_Mod.F90  DryDepProcess_Mod.F90  ProcessDryDepInterface_Mod.F90  ccpr_scheme_GOCART_DryDep_mod.F90
src/process/dust/: CCPr_Dust_Mod.F90  CMakeLists.txt  DustCommon_Mod.F90  DustProcessCreator_Mod.F90  DustProcess_Mod.F90  ProcessDustInterface_Mod.F90  ccpr_dust_common_mod.F90  ccpr_scheme_fengsha_mod.F90  ccpr_scheme_ginoux_mod.F90
src/process/externalemission/: CMakeLists.txt  ExternalEmissionCommon_Mod.F90  ExternalEmissionProcess_Mod.F90
src/process/old/: opt_gocart_mod.F90  wetdep_ls_mod.F90
src/process/plumerise/: CCPr_Plumerise_Mod.F90  CCPr_Scheme_Briggs_mod.F90  CCPr_Scheme_Sofiev_mod.F90
src/process/seasalt/: CCPr_SeaSalt_Mod.F90  CMakeLists.txt  ProcessSeaSaltCreator_Mod.F90  ProcessSeaSaltInterface_Mod.F90  SeaSaltCommon_Mod.F90  SeaSaltProcessCreator_Mod.F90  SeaSaltProcess_Mod.F90  ccpr_scheme_geos12_mod.F90  ccpr_scheme_gong03_mod.F90  ccpr_scheme_gong97_mod.F90  (+1 more)
test/nuopc/: CATChem_field_mapping.yml  CATChem_new_config.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  test_nuopc_cap.F90
tests/: CATChem_config.yml  CATChem_emission.yml  CATChem_new_config.yml  CMakeLists.txt  TEST_PLAN.md  test_CATChemCore.f90  test_ChemSpeciesUtils.f90  test_ColumnInterface.f90  test_ConfigManager.f90  test_Constants.f90  test_DiagnosticInterface.f90  test_DiagnosticManager.f90  test_Error.f90  test_GridGeometry.f90  test_GridManager.f90  test_MetState.f90  test_Precision.f90  test_ProcessFactory.f90  test_ProcessInterface.f90  test_ProcessManager.f90  test_ProcessRegistry.f90  test_StateInterface.f90  test_StateManager.f90  test_TimeState.f90  test_VirtualColumn.f90  test_catchem_api.F90  test_config.yml  test_config_output.yml  test_drydep.f90  test_dust.f90  test_main.F90  test_seasalt.F90  test_species.yml  testing_mod.f90
tools/process_generator/: EXTERNAL_EMISSION_DATA_SUMMARY.md  README.md  README_IMPROVED.md  TEMPLATE_COMPARISON.md  process_generator.py  pyproject.toml  requirements.txt  setup_dev_env.sh
(+1127 files in other folders)
